--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -20,10 +20,22 @@
 }
 
 .site-layout-footer {
+  z-index: 1;
   text-align: center;
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
   background: rgba(255, 255, 255, 0.5) !important;
+}
+
+.map-wrapper {
+  height: 100% !important;
+  background: rgba(69, 173, 217, 0.15) 0% 0% no-repeat padding-box;
+  border: 1px solid rgba(69, 173, 217, 0.15);
+  border-radius: 20px 0px 0px 20px;
+}
+.map-container {
+  width: 100% !important;
+  height: 87vh !important;
 }
