--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,9 +1,9 @@
 .logo {
   float: left;
-  width: 120px;
+  width: fit-content;
   height: 31px;
-  margin: 16px 24px 16px 0;
-  background: rgba(255, 255, 255, 0.3);
+  /* margin: 16px 24px 16px 0; */
+  color: rgba(255, 255, 255, 0.75);
 }
 
 .ant-row-rtl .logo {
