[#5] Improve circle marker behaviour

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,8 +11,8 @@
   margin: 16px 0 16px 24px;
 }
 
-.site-layout-header {
-}
+/* .site-layout-header {
+} */
 
 .site-layout-content {
   min-height: 87vh !important;
