--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -57,3 +57,43 @@
   text-align: center;
   width: 33px;
 }
+
+.registration-table {
+  width: 100%;
+  margin-bottom: 10px;
+}
+.registration-table .registration-row {
+  display: flex;
+  align-items: center;
+  padding: 10px 0px;
+}
+.registration-table .registration-row:not(:last-of-type) {
+  border-bottom: 0.25px solid #a5b0c9;
+}
+.registration-row .registration-question {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 20px;
+  color: #181818;
+  padding-right: 10px;
+}
+.detail-modal .title-holder {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.detail-modal .title-holder p {
+  margin-bottom: 0px;
+}
+.detail-modal .ant-modal-content {
+  padding: 0px;
+}
+.detail-modal .ant-modal-body {
+  padding: 10px 20px 20px;
+}
+.detail-modal .ant-modal-header {
+  border-bottom: 0.25px solid #a5b0c9;
+  padding-bottom: 10px;
+  padding: 20px 20px;
+  margin-bottom: 0px;
+}
