--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -10,11 +10,21 @@
     padding: $padding-container-y $padding-container-x;
     min-height: calc(100vh - 10rem);
   }
-
+  a,
+  span,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  p {
+    color: $black;
+    font-family: $font-family !important;
+  }
   .float-left {
     float: left;
   }
-
   .float-right {
     float: right;
   }
