--- a/frontend/src/variables.scss
+++ b/frontend/src/variables.scss
@@ -3,6 +3,7 @@ $screen-regular: 769px;
 $screen-large: 1200px;
 
 $black: #000000;
+$blackTheme: #262626;
 $white: #ffffff;
 $cacao: #673016;
 $bg-grey: #eeeeee;
