[#33] Add metrics section

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,6 +1,6 @@
 @import "variables";
 
-@import url("https://fonts.googleapis.com/css2?family=Jost:wght@100;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Jost:wght@100;400;500;600;700&display=swap");
 
 #root {
   font-family: $font-family !important;
