--- a/frontend/src/components/layout/style.scss
+++ b/frontend/src/components/layout/style.scss
@@ -11,7 +11,7 @@
   .header {
     width: 100%;
     padding: $padding-container-y $padding-container-x;
-    background-color: $white;
+    background-color: $bg-grey;
     color: $black;
     z-index: 999;
 
