--- a/frontend/src/variables.scss
+++ b/frontend/src/variables.scss
@@ -6,7 +6,7 @@ $black: #000000;
 $blackTheme: #262626;
 $white: #ffffff;
 $cacao: #673016;
-$bg-grey: #eeeeee;
+$bg-grey: #f6f6f6;
 $border-grey: #eaecec;
 
 $padding-container-x: 85px;
