--- a/frontend/src/pages/home/style.scss
+++ b/frontend/src/pages/home/style.scss
@@ -107,5 +107,41 @@
         }
       }
     }
+    .about-section {
+      background-color: $bg-grey;
+      padding-top: 60px;
+      padding-bottom: 60px;
+      text-align: center;
+      .ant-row {
+        width: 70%;
+        margin: 0 auto;
+      }
+      .about-content {
+        font-weight: 400;
+        font-size: 48px;
+        line-height: 158%;
+        text-align: center;
+        text-transform: capitalize;
+        color: $blackTheme;
+        padding-top: 40px;
+      }
+      .info-content {
+        h3 {
+          font-weight: 700;
+          font-size: 20px;
+          line-height: 158%;
+          text-align: center;
+          text-transform: capitalize;
+          padding-top: 20px;
+        }
+        p {
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 158%;
+          text-align: center;
+          text-transform: capitalize;
+        }
+      }
+    }
   }
 }
