[#35] Add dashboard page structure

--- a/frontend/src/variables.scss
+++ b/frontend/src/variables.scss
@@ -7,6 +7,7 @@ $blackTheme: #262626;
 $white: #ffffff;
 $cacao: #673016;
 $bg-grey: #f6f6f6;
+$bg-grey-dashboard: #f7f7f7;
 $border-grey: #eaecec;
 
 $padding-container-x: 85px;
