--- a/frontend/src/components/layout/style.scss
+++ b/frontend/src/components/layout/style.scss
@@ -41,10 +41,12 @@
       font-size: 0.9rem;
       font-weight: 400;
       text-transform: uppercase;
-      button {
+      a {
         font-weight: 600;
         font-size: 16px;
         line-height: 23px;
+        padding: 0 10px;
+        text-transform: capitalize;
         &.active {
           color: #1890ff;
         }
