--- a/frontend/src/pages/dashboard/style.scss
+++ b/frontend/src/pages/dashboard/style.scss
@@ -6,18 +6,37 @@
     aside {
       background-color: $bg-grey-dashboard;
       box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.1);
-      .ant-menu {
-        background-color: $bg-grey-dashboard;
-        text-align: right;
-        .ant-menu-item {
-          flex-direction: column;
-          margin: 0;
+      .menu {
+        line-height: 20px;
+        background-color: inherit;
+        li {
+          cursor: pointer;
+          display: block;
+          padding: 20px 20px 20px 0px;
           height: auto;
-          line-height: normal;
+          margin: 0;
           width: 100%;
+          border-radius: 0px;
+          border-bottom: 1px solid #bbb9b9;
+          &.ant-menu-item-selected {
+            background: #c1e0f1;
+            border-bottom: 10px solid #2493fd;
+            border-top: none;
+          }
         }
         .ant-menu-title-content {
-          margin: 0;
+          width: 130px;
+          margin: auto 0 auto auto;
+          display: block;
+          text-align: center;
+          p {
+            margin-bottom: 0;
+          }
+          span {
+            display: block;
+            line-height: initial;
+            margin: 0;
+          }
         }
       }
       .ant-layout-sider-trigger {
@@ -26,7 +45,8 @@
       .ant-layout-sider-children {
         text-align: right;
         .logo-container {
-          padding: 20px 40px;
+          height: 100px;
+          margin: 20px 40px;
         }
       }
     }
@@ -34,7 +54,8 @@
       background-color: $white;
       .ant-layout-header {
         background-color: $bg-grey-dashboard;
-        padding: 20px;
+        padding: 20px 40px;
+        height: 140px;
       }
     }
   }
