--- a/frontend/src/pages/dashboard/style.scss
+++ b/frontend/src/pages/dashboard/style.scss
@@ -13,7 +13,7 @@
           cursor: pointer;
           display: block;
           padding: 20px 20px 20px 0px;
-          height: auto;
+          height: 90px;
           margin: 0;
           width: 100%;
           border-radius: 0px;
