--- a/frontend/src/pages/home/style.scss
+++ b/frontend/src/pages/home/style.scss
@@ -54,6 +54,7 @@
     .metrics-section {
       padding-top: 60px;
       padding-bottom: 60px;
+      background-color: $white;
       .title {
         text-align: center;
         font-weight: 600;
@@ -108,7 +109,7 @@
       }
     }
     .about-section {
-      background-color: $bg-grey;
+      background-color: $bg-grey !important;
       padding-top: 60px;
       padding-bottom: 60px;
       text-align: center;
