[#35] Update font size

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -28,4 +28,17 @@
   .float-right {
     float: right;
   }
+  h1 {
+    font-size: 56px;
+  }
+  h2 {
+    font-size: 36px;
+  }
+  h3 {
+    font-size: 20px;
+  }
+  p,
+  span {
+    font-size: 16px;
+  }
 }
