--- a/frontend/src/components/maps/style.scss
+++ b/frontend/src/components/maps/style.scss
@@ -13,6 +13,7 @@
       background: #fff;
       z-index: 1000;
       box-shadow: 0 3px 6px rgba(0, 0, 0, 0.17);
+      border-radius: 5px;
       .ant-select {
         width: 100%;
       }
