--- a/frontend/src/components/maps/style.scss
+++ b/frontend/src/components/maps/style.scss
@@ -37,6 +37,20 @@
         }
       }
     }
+    .bottom-filter-container {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      margin: 10px;
+      padding: 5px;
+      font-size: 12px;
+      font-family: inherit;
+      width: 400px;
+      background: #fff;
+      z-index: 1000;
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.17);
+      border-radius: 5px;
+    }
 
     .custom-marker-cluster {
       border-radius: 50%;
