--- a/frontend/src/components/maps/style.scss
+++ b/frontend/src/components/maps/style.scss
@@ -45,11 +45,33 @@
       padding: 5px;
       font-size: 12px;
       font-family: inherit;
-      width: 400px;
+      width: 300px;
       background: #fff;
       z-index: 1000;
       box-shadow: 0 3px 6px rgba(0, 0, 0, 0.17);
       border-radius: 5px;
+      .ant-collapse-header {
+        &:hover {
+          background: #007bff !important;
+          span {
+            color: #fff;
+          }
+        }
+      }
+      .ant-collapse-content-box {
+        padding: 10px 5px;
+        button {
+          width: 100%;
+          text-align: left;
+          height: auto;
+          &:hover {
+            background: #007bff !important;
+            span {
+              color: #fff;
+            }
+          }
+        }
+      }
     }
 
     .custom-marker-cluster {
