[#56] Add state to hold selected filter values

--- a/frontend/src/components/maps/style.scss
+++ b/frontend/src/components/maps/style.scss
@@ -64,6 +64,12 @@
           width: 100%;
           text-align: left;
           height: auto;
+          &.selected {
+            background: #dc3545;
+            span {
+              color: #fff;
+            }
+          }
           &:hover {
             background: #007bff !important;
             span {
