[#56] Add enable button

--- a/frontend/src/components/maps/style.scss
+++ b/frontend/src/components/maps/style.scss
@@ -77,6 +77,12 @@
             }
           }
         }
+        .enable-button {
+          text-align: center;
+          span {
+            color: #fff;
+          }
+        }
       }
     }
 
