--- a/frontend/src/pages/dashboard/style.scss
+++ b/frontend/src/pages/dashboard/style.scss
@@ -179,6 +179,12 @@
                 line-height: 23px;
                 color: #4d4d4d;
               }
+              &.selected {
+                background-color: $bg-blue;
+                span {
+                  color: $white;
+                }
+              }
             }
           }
           .ant-tag {
