--- a/frontend/src/pages/dashboard/style.scss
+++ b/frontend/src/pages/dashboard/style.scss
@@ -63,7 +63,7 @@
         .ant-layout-sider-children {
           .logo-container {
             margin: 0px;
-            padding: 10px;
+            padding: 0px 10px 10px 10px;
             .ant-image {
               margin: 5px 0 0;
             }
