[#62] Add color markers

--- a/frontend/src/components/maps/style.scss
+++ b/frontend/src/components/maps/style.scss
@@ -96,7 +96,16 @@
         }
       }
     }
-
+    .leaflet-container {
+      .custom-marker {
+        span {
+          width: 1.5rem;
+          height: 1.5rem;
+          border-radius: 50%;
+          display: block;
+        }
+      }
+    }
     .custom-marker-cluster {
       border-radius: 50%;
       color: #000000;
