--- a/frontend/src/components/maps/style.scss
+++ b/frontend/src/components/maps/style.scss
@@ -50,7 +50,7 @@
     }
     .map-chart-container {
       position: absolute;
-      top: 0;
+      bottom: 0;
       right: initial;
       margin: 10px;
       padding: 5px;
