--- a/frontend/src/components/maps/style.scss
+++ b/frontend/src/components/maps/style.scss
@@ -63,18 +63,18 @@
       border-radius: 5px;
     }
     .bottom-filter-container {
-      position: absolute;
-      bottom: 0;
-      right: 0;
-      margin: 10px;
-      padding: 5px;
-      font-size: 12px;
-      font-family: inherit;
-      width: 300px;
-      background: #fff;
-      z-index: 1000;
-      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.17);
-      border-radius: 5px;
+      // position: absolute;
+      // bottom: 0;
+      // right: 0;
+      // margin: 10px;
+      // padding: 5px;
+      // font-size: 12px;
+      // font-family: inherit;
+      // width: 300px;
+      // background: #fff;
+      // z-index: 1000;
+      // box-shadow: 0 3px 6px rgba(0, 0, 0, 0.17);
+      // border-radius: 5px;
       .ant-collapse-header {
         &:hover {
           background: #007bff !important;
