[#79] Add custom dropdown for province

--- a/frontend/src/pages/dashboard/style.scss
+++ b/frontend/src/pages/dashboard/style.scss
@@ -198,6 +198,13 @@
                 }
               }
             }
+            .bottom-filter-container {
+              .ant-space {
+                .ant-space-item {
+                  width: 200px;
+                }
+              }
+            }
           }
           .ant-tag {
             margin-top: 20px;
