--- a/frontend/src/components/maps/style.scss
+++ b/frontend/src/components/maps/style.scss
@@ -62,54 +62,6 @@
       box-shadow: 0 3px 6px rgba(0, 0, 0, 0.17);
       border-radius: 5px;
     }
-    .bottom-filter-container {
-      // position: absolute;
-      // bottom: 0;
-      // right: 0;
-      // margin: 10px;
-      // padding: 5px;
-      // font-size: 12px;
-      // font-family: inherit;
-      // width: 300px;
-      // background: #fff;
-      // z-index: 1000;
-      // box-shadow: 0 3px 6px rgba(0, 0, 0, 0.17);
-      // border-radius: 5px;
-      .ant-collapse-header {
-        &:hover {
-          background: #007bff !important;
-          span {
-            color: #fff;
-          }
-        }
-      }
-      .ant-collapse-content-box {
-        padding: 10px 5px;
-        button {
-          width: 100%;
-          text-align: left;
-          height: auto;
-          &.selected {
-            background: #dc3545;
-            span {
-              color: #fff;
-            }
-          }
-          &:hover {
-            background: #007bff !important;
-            span {
-              color: #fff;
-            }
-          }
-        }
-        .enable-button {
-          text-align: center;
-          span {
-            color: #fff;
-          }
-        }
-      }
-    }
     .leaflet-container {
       .custom-marker {
         span {
@@ -126,6 +78,46 @@
       height: 33px;
       text-align: center;
       width: 33px;
+    }
+  }
+}
+.bottom-filter {
+  background-color: #fff;
+  padding: 5px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.17);
+  border-radius: 5px;
+  height: 300px;
+  overflow: auto;
+  .ant-space-item {
+    &:last-child {
+      position: sticky;
+      bottom: 0;
+      left: 0;
+      right: 0;
+    }
+  }
+  .enable-button {
+    text-align: center;
+    span {
+      color: #fff;
+    }
+  }
+  button {
+    width: 100%;
+    text-align: left;
+    height: auto;
+    color: #000000;
+    &.selected {
+      background: #dc3545;
+      span {
+        color: #fff;
+      }
+    }
+    &:hover {
+      background: #007bff !important;
+      span {
+        color: #fff;
+      }
     }
   }
 }
