[#82] Add bar chart

--- a/frontend/src/pages/dashboard/style.scss
+++ b/frontend/src/pages/dashboard/style.scss
@@ -238,6 +238,32 @@
               }
             }
           }
+          .bar-chart-wrapper {
+            background: rgba(69, 173, 217, 0.059) 0 0 no-repeat padding-box;
+            border: 1px solid #fff;
+            .header-container {
+              background: #00989f;
+              padding: 20px 0px;
+              h3 {
+                color: #fff !important;
+                font-size: 18px;
+                font-weight: 700;
+                margin-bottom: 0;
+              }
+            }
+            .chart-wrapper {
+              padding: 20px;
+              .ant-select {
+                width: 100%;
+                .ant-select-selection-placeholder {
+                  text-align: left;
+                }
+                .ant-select-selection-item {
+                  text-align: left;
+                }
+              }
+            }
+          }
         }
       }
     }
