--- a/frontend/src/components/maps/style.scss
+++ b/frontend/src/components/maps/style.scss
@@ -80,6 +80,19 @@
       width: 33px;
     }
   }
+  .map-loading {
+    height: 100%;
+    position: absolute;
+    width: 100%;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.1);
+    .ant-spin {
+      align-items: center;
+      display: flex;
+      justify-content: center;
+      height: 100%;
+    }
+  }
 }
 .bottom-filter {
   background-color: #fff;
