--- a/frontend/src/components/maps/style.scss
+++ b/frontend/src/components/maps/style.scss
@@ -164,7 +164,7 @@
   }
 }
 .leaflet-popup-content {
-  margin: 0;
-  padding: 20px 15px;
+  margin: 0 !important;
+  padding: 20px 15px !important;
   line-height: 1.5 !important;
 }
