--- a/frontend/src/components/maps/style.scss
+++ b/frontend/src/components/maps/style.scss
@@ -163,8 +163,28 @@
     }
   }
 }
-.leaflet-popup-content {
-  margin: 0 !important;
-  padding: 20px 15px !important;
-  line-height: 1.5 !important;
+.leaflet-popup-content-wrapper {
+  border-radius: 8px !important;
+  .leaflet-popup-content {
+    margin: 0 !important;
+    padding: 20px 15px !important;
+    line-height: 1.5 !important;
+  }
+}
+.school-detail-modal-body {
+  margin-top: 20px;
+  .loading-wrapper {
+    height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .anticon {
+    padding: 0;
+    margin: 0 8px;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
