[#98] Render answer value on school detial popup

--- a/frontend/src/components/maps/style.scss
+++ b/frontend/src/components/maps/style.scss
@@ -187,4 +187,8 @@
     align-items: center;
     justify-content: center;
   }
+  .ant-tabs-tabpane {
+    overflow-y: auto !important;
+    height: calc(100vh - 500px);
+  }
 }
