[#103] Add jmp hint

--- a/frontend/src/pages/dashboard/style.scss
+++ b/frontend/src/pages/dashboard/style.scss
@@ -235,6 +235,9 @@
               .chart-header {
                 border-bottom: 1px solid #f0f0f0;
                 padding: 8px 12px;
+                h3 {
+                  margin-bottom: 0px;
+                }
               }
             }
           }
