--- a/frontend/src/components/maps/style.scss
+++ b/frontend/src/components/maps/style.scss
@@ -45,6 +45,11 @@
           margin-top: 20px;
           border-top: 1px solid #e4e4e4;
           border-radius: 0px;
+          align-items: flex-start;
+          line-height: 20px;
+          .anticon-info-circle {
+            padding-top: 5px;
+          }
         }
       }
     }
@@ -61,6 +66,10 @@
       z-index: 1000;
       box-shadow: 0 3px 6px rgba(0, 0, 0, 0.17);
       border-radius: 5px;
+      h5 {
+        text-align: center;
+        font-weight: 700;
+      }
     }
     .leaflet-container {
       .custom-marker {
