[#103] Change bar chart style

--- a/frontend/src/pages/dashboard/style.scss
+++ b/frontend/src/pages/dashboard/style.scss
@@ -258,6 +258,7 @@
               padding: 20px;
               .ant-select {
                 width: 100%;
+                margin-bottom: 10px;
                 .ant-select-selection-placeholder {
                   text-align: left;
                 }
