--- a/frontend/src/components/maps/style.scss
+++ b/frontend/src/components/maps/style.scss
@@ -66,9 +66,13 @@
       z-index: 1000;
       box-shadow: 0 3px 6px rgba(0, 0, 0, 0.17);
       border-radius: 5px;
-      h5 {
-        text-align: center;
-        font-weight: 700;
+      .ant-card-body {
+        padding: 0px;
+        h5 {
+          padding-top: 10px;
+          text-align: center;
+          font-weight: 700;
+        }
       }
     }
     .leaflet-container {
