--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -74,3 +74,9 @@
     }
   }
 }
+
+.ant-select-item-group {
+  color: #000000 !important;
+  font-size: 13px !important;
+  font-weight: 600 !important;
+}
