--- a/frontend/src/pages/dashboard/style.scss
+++ b/frontend/src/pages/dashboard/style.scss
@@ -87,184 +87,200 @@
         }
       }
     }
-    .site-layout {
-      background-color: $white;
-      .ant-layout-header {
-        background-color: $bg-grey-dashboard;
-        padding: 20px 30px;
-        height: auto;
-        line-height: 10px;
+  }
+  .site-layout {
+    background-color: $white;
+    .ant-layout-header {
+      background-color: #343a40;
+      padding: 0.5rem 1rem;
+      height: auto;
+      line-height: 10px;
+      .logo {
+        display: inline-block;
       }
-      .dashboard-content {
-        padding: 20px 30px;
-        #map,
-        #dashboard {
-          .title-wrapper {
-            display: flex;
-            align-items: center;
+    }
+    .dashboard-content {
+      padding: 20px 30px;
+      background-color: #f5f5f5;
+      #map,
+      #dashboard {
+        .title-wrapper {
+          display: flex;
+          align-items: center;
 
-            h2 {
-              font-weight: 600;
-              line-height: 52px;
-              color: #4d4d4d;
-              margin-right: 20px;
+          h2 {
+            font-weight: 600;
+            line-height: 52px;
+            color: #4d4d4d;
+            margin-right: 20px;
+          }
+          p {
+            font-weight: 400;
+            line-height: 23px;
+            color: #4d4d4d;
+            span {
+              color: #0093d5;
             }
-            p {
-              font-weight: 400;
+          }
+        }
+
+        .map-wrapper {
+          margin-top: 30px;
+          background: rgba(69, 173, 217, 0.15) 0% 0% no-repeat padding-box;
+          border: 1px solid rgba(69, 173, 217, 0.15);
+          border-radius: 10px;
+        }
+        .map-container {
+          width: 100% !important;
+          height: 87vh !important;
+          filter: drop-shadow(4px 4px 12px rgba(0, 0, 0, 0.1));
+          border-radius: 10px;
+        }
+        .leaflet-container {
+          filter: drop-shadow(4px 4px 12px rgba(0, 0, 0, 0.1));
+          border-radius: 10px;
+        }
+
+        .loading-wrapper {
+          padding: 50px 0 25px 0;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+
+        .registration-table {
+          width: 100%;
+          margin-bottom: 10px;
+        }
+        .registration-table .registration-row {
+          display: flex;
+          align-items: center;
+          padding: 10px 0px;
+        }
+        .registration-table .registration-row:not(:last-of-type) {
+          border-bottom: 0.25px solid #a5b0c9;
+        }
+        .registration-row .registration-question {
+          font-weight: 600;
+          font-size: 14px;
+          line-height: 20px;
+          color: #181818;
+          padding-right: 10px;
+        }
+        .detail-modal .title-holder {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+        }
+        .detail-modal .title-holder p {
+          margin-bottom: 0px;
+        }
+        .detail-modal .ant-modal-content {
+          padding: 0px;
+        }
+        .detail-modal .ant-modal-body {
+          padding: 10px 20px 20px;
+        }
+        .detail-modal .ant-modal-header {
+          border-bottom: 0.25px solid #a5b0c9;
+          padding-bottom: 10px;
+          padding: 20px 20px;
+          margin-bottom: 0px;
+        }
+        .advance-search-container {
+          width: 100%;
+          button {
+            width: 100%;
+            span {
+              font-weight: 600;
               line-height: 23px;
               color: #4d4d4d;
+            }
+            &.selected {
+              background-color: $bg-blue;
               span {
-                color: #0093d5;
+                color: $white;
               }
             }
           }
-
-          .map-wrapper {
-            margin-top: 30px;
-            background: rgba(69, 173, 217, 0.15) 0% 0% no-repeat padding-box;
-            border: 1px solid rgba(69, 173, 217, 0.15);
-            border-radius: 10px;
+          .bottom-filter-container {
+            .ant-space {
+              .ant-space-item {
+                width: 200px;
+              }
+            }
           }
-          .map-container {
-            width: 100% !important;
-            height: 87vh !important;
-            filter: drop-shadow(4px 4px 12px rgba(0, 0, 0, 0.1));
-            border-radius: 10px;
-          }
-          .leaflet-container {
-            filter: drop-shadow(4px 4px 12px rgba(0, 0, 0, 0.1));
-            border-radius: 10px;
-          }
-
-          .loading-wrapper {
-            padding: 50px 0 25px 0;
+        }
+        .ant-tag {
+          margin-top: 20px;
+        }
+        .advance-search-container .ant-collapse-header {
+          padding: 0 !important;
+        }
+        .advance-search-container .ant-checkbox-wrapper {
+          display: block;
+          margin-left: 0;
+        }
+        .advance-search-container .ant-checkbox-inner {
+          display: inline-block;
+        }
+        .search-question-option-wrapper {
+          margin-top: 20px;
+          .input-group {
             display: flex;
-            align-items: center;
-            justify-content: center;
-          }
-
-          .registration-table {
-            width: 100%;
-            margin-bottom: 10px;
-          }
-          .registration-table .registration-row {
-            display: flex;
-            align-items: center;
-            padding: 10px 0px;
-          }
-          .registration-table .registration-row:not(:last-of-type) {
-            border-bottom: 0.25px solid #a5b0c9;
-          }
-          .registration-row .registration-question {
-            font-weight: 600;
-            font-size: 14px;
-            line-height: 20px;
-            color: #181818;
-            padding-right: 10px;
-          }
-          .detail-modal .title-holder {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-          }
-          .detail-modal .title-holder p {
-            margin-bottom: 0px;
-          }
-          .detail-modal .ant-modal-content {
-            padding: 0px;
-          }
-          .detail-modal .ant-modal-body {
-            padding: 10px 20px 20px;
-          }
-          .detail-modal .ant-modal-header {
-            border-bottom: 0.25px solid #a5b0c9;
-            padding-bottom: 10px;
-            padding: 20px 20px;
-            margin-bottom: 0px;
-          }
-          .advance-search-container {
-            width: 100%;
-            button {
-              width: 100%;
-              span {
-                font-weight: 600;
-                line-height: 23px;
-                color: #4d4d4d;
-              }
-              &.selected {
-                background-color: $bg-blue;
-                span {
-                  color: $white;
-                }
-              }
-            }
-            .bottom-filter-container {
-              .ant-space {
-                .ant-space-item {
-                  width: 200px;
-                }
-              }
+            .ant-form-item {
+              margin-right: 10px;
             }
           }
-          .ant-tag {
-            margin-top: 20px;
-          }
-          .advance-search-container .ant-collapse-header {
-            padding: 0 !important;
-          }
-          .advance-search-container .ant-checkbox-wrapper {
-            display: block;
-            margin-left: 0;
-          }
-          .advance-search-container .ant-checkbox-inner {
-            display: inline-block;
-          }
-          .search-question-option-wrapper {
-            margin-top: 20px;
-            .input-group {
-              display: flex;
-              .ant-form-item {
-                margin-right: 10px;
-              }
-            }
-          }
-          .row-wrapper {
-            margin-bottom: 20px;
-            .ant-card-body {
-              padding: 0;
-              .chart-header {
-                border-bottom: 1px solid #f0f0f0;
-                padding: 8px 12px;
-                h3 {
-                  margin-bottom: 0px;
-                }
-              }
-            }
-          }
-          .bar-chart-wrapper {
-            background: rgba(69, 173, 217, 0.059) 0 0 no-repeat padding-box;
-            border: 1px solid #fff;
-            .header-container {
-              background: #00989f;
-              padding: 20px 0px;
+        }
+        .row-wrapper {
+          margin-bottom: 20px;
+          .ant-card-body {
+            padding: 0;
+            .chart-header {
+              border-bottom: 1px solid #f0f0f0;
+              padding: 8px 12px;
               h3 {
-                color: #fff !important;
-                font-size: 18px;
-                font-weight: 700;
-                margin-bottom: 0;
+                margin-bottom: 0px;
               }
             }
-            .chart-wrapper {
-              padding: 20px;
-              .ant-select {
-                width: 100%;
-                margin-bottom: 10px;
-                .ant-select-selection-placeholder {
-                  text-align: left;
-                }
-                .ant-select-selection-item {
-                  text-align: left;
-                }
+          }
+        }
+        .bar-chart-wrapper {
+          background: rgba(69, 173, 217, 0.059) 0 0 no-repeat padding-box;
+          border: 1px solid #fff;
+          .header-container {
+            background: #00989f;
+            padding: 20px 0px;
+            h3 {
+              color: #fff !important;
+              font-size: 18px;
+              font-weight: 700;
+              margin-bottom: 0;
+            }
+          }
+          .chart-wrapper {
+            padding: 20px;
+            .ant-select {
+              width: 100%;
+              margin-bottom: 10px;
+              .ant-select-selection-placeholder {
+                text-align: left;
+              }
+              .ant-select-selection-item {
+                text-align: left;
+              }
+            }
+          }
+        }
+        .ant-breadcrumb {
+          li {
+            span {
+              color: rgba(0, 0, 0, 0.25);
+            }
+            &:last-child {
+              span {
+                color: rgba(0, 0, 0, 0.88);
               }
             }
           }
