--- a/frontend/src/pages/dashboard/style.scss
+++ b/frontend/src/pages/dashboard/style.scss
@@ -26,7 +26,7 @@
         }
         .ant-menu-title-content {
           width: 130px;
-          margin: auto 0 auto auto;
+          margin: 0 auto;
           display: block;
           text-align: center;
           line-height: normal;
@@ -63,7 +63,8 @@
         .ant-layout-sider-children {
           .logo-container {
             margin: 0px;
-            padding: 0px 10px 10px 10px;
+            padding: 0px 10px 0px 10px;
+            border-bottom: 1px solid #f5f5f5;
             .ant-image {
               margin: 5px 0 0;
             }
@@ -125,7 +126,7 @@
         }
 
         .map-wrapper {
-          margin-top: 30px;
+          margin-top: 20px;
           background: rgba(69, 173, 217, 0.15) 0% 0% no-repeat padding-box;
           border: 1px solid rgba(69, 173, 217, 0.15);
           border-radius: 10px;
@@ -189,15 +190,33 @@
         }
         .advance-search-container {
           width: 100%;
+          .ant-select-selector {
+            height: auto;
+            border: 2px solid #d9d9d9;
+            .ant-select-selection-placeholder {
+              color: #bfbfbf;
+            }
+          }
+          .ant-select-arrow {
+            span {
+              font-size: 14px;
+              color: #bfbfbf;
+            }
+          }
           button {
             width: 100%;
+            height: auto;
+            border: 2px solid #343a40;
+            font-size: 1em;
+            font-weight: 700;
+            transition: all 0.19s ease-out !important;
             span {
               font-weight: 600;
-              line-height: 23px;
-              color: #4d4d4d;
+              line-height: 16px;
+              color: #343a40;
             }
             &.selected {
-              background-color: $bg-blue;
+              background-color: #343a40;
               span {
                 color: $white;
               }
@@ -277,6 +296,12 @@
           li {
             span {
               color: rgba(0, 0, 0, 0.25);
+              a {
+                color: rgba(0, 0, 0, 0.25);
+                &:hover {
+                  background-color: transparent;
+                }
+              }
             }
             &:last-child {
               span {
