--- a/frontend/src/pages/dashboard/style.scss
+++ b/frontend/src/pages/dashboard/style.scss
@@ -190,6 +190,11 @@
         }
         .advance-search-container {
           width: 100%;
+          .align-right {
+            margin-left: auto;
+            display: flex;
+            justify-content: end;
+          }
           .ant-select-selector {
             height: auto;
             border: 2px solid #d9d9d9;
@@ -244,7 +249,6 @@
           display: inline-block;
         }
         .search-question-option-wrapper {
-          margin-top: 20px;
           .input-group {
             display: flex;
             .ant-form-item {
