--- a/frontend/src/components/maps/style.scss
+++ b/frontend/src/components/maps/style.scss
@@ -30,8 +30,16 @@
               text-align: left;
               height: auto;
               border-radius: 0px;
-              span {
+              &.selected {
+                span {
+                  color: #fff;
+                }
+              }
+              .anticon-check-circle {
                 color: #fff;
+              }
+              span {
+                color: #393d3d;
               }
             }
           }
