--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -80,3 +80,38 @@
   font-size: 13px !important;
   font-weight: 600 !important;
 }
+
+.custom-popover {
+  .ant-popover-inner-content {
+    height: 300px;
+    overflow: auto;
+    padding: 0px 10px;
+  }
+  h3 {
+    margin-bottom: 5px;
+  }
+  .category {
+    margin-bottom: 20px;
+    border-bottom: 2px solid #f5f5f5;
+  }
+  h5 {
+    font-weight: 600;
+    font-size: 16px;
+    margin-bottom: 5px;
+    span {
+      width: 10px;
+      display: inline-block;
+      height: 10px;
+      border-radius: 50%;
+      margin-right: 10px;
+    }
+  }
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    p {
+      padding-left: 20px;
+    }
+  }
+}
