[#111] Fix map height

--- a/frontend/src/pages/dashboard/style.scss
+++ b/frontend/src/pages/dashboard/style.scss
@@ -131,7 +131,7 @@
         }
         .map-container {
           width: 100% !important;
-          height: 87vh !important;
+          height: calc(100vh - 130px) !important;
         }
 
         .loading-wrapper {
