--- a/frontend/src/components/maps/style.scss
+++ b/frontend/src/components/maps/style.scss
@@ -30,6 +30,16 @@
               text-align: left;
               height: auto;
               border-radius: 0px;
+              display: flex;
+              align-items: center;
+              justify-content: space-between;
+              .anticon {
+                padding-right: 10px;
+              }
+              .anticon-info-circle {
+                padding-right: 0;
+                color: #fff;
+              }
               &.selected {
                 span {
                   color: #fff;
@@ -49,7 +59,7 @@
         .ant-alert {
           background-color: #fff;
           border: none;
-          padding: 8px 0px;
+          padding: 8px 15px;
           margin-top: 20px;
           border-top: 1px solid #e4e4e4;
           border-radius: 0px;
