--- a/frontend/src/pages/dashboard/style.scss
+++ b/frontend/src/pages/dashboard/style.scss
@@ -97,7 +97,14 @@
       height: auto;
       line-height: 10px;
       .logo {
-        display: inline-block;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding-right: 15px;
+        h3 {
+          margin-bottom: 0px;
+          color: #fff;
+        }
       }
     }
     .dashboard-content {
