[#114] Add school detail in manage data

--- a/frontend/src/pages/dashboard/style.scss
+++ b/frontend/src/pages/dashboard/style.scss
@@ -322,6 +322,21 @@
             }
           }
         }
+        .ant-table-container {
+          .ant-tabs {
+            width: 50%;
+          }
+        }
+        .answer-table {
+          .ant-table-title {
+            border-bottom: 3px solid #0288d1;
+            color: #0288d1;
+            font-weight: 700;
+          }
+          .ant-table-thead {
+            display: none;
+          }
+        }
       }
     }
   }
