[#126] Finalize map fetch by pagination

--- a/frontend/src/pages/dashboard/style.scss
+++ b/frontend/src/pages/dashboard/style.scss
@@ -196,7 +196,7 @@
           .align-right {
             margin-left: auto;
             display: flex;
-            justify-content: end;
+            justify-content: flex-end;
           }
           .ant-select-selector {
             height: auto;
