[#145] Setup incorrect monitoring round email & test

--- a/backend/templates/main.html
+++ b/backend/templates/main.html
@@ -414,8 +414,9 @@
                       >
                         <table>
                           <tbody>
+                            <!-- Header -->
                             <tr>
-                              <td>
+                              <!-- <td>
                                 <img
                                   style="
                                     vertical-align: middle;
@@ -427,7 +428,7 @@
                                   alt="{{ logo }}"
                                   src="{{ logo }}"
                                 />
-                              </td>
+                              </td> -->
                               <td>
                                 <h1
                                   style="
@@ -438,7 +439,7 @@
                                     font-weight: 600;
                                   "
                                 >
-                                  {{ instance_name }}
+                                  SI-WINS
                                 </h1>
                               </td>
                             </tr>
@@ -447,6 +448,7 @@
                       </div>
                     </td>
                   </tr>
+                  <!-- Body -->
                   <tr
                     style="
                       -ms-text-size-adjust: 100%;
@@ -480,7 +482,7 @@
                             font-family: 'Poppins', sans-serif;
                             color: #000000;
                             margin-top: 0;
-                            font-size: 20px;
+                            font-size: 16px;
                             line-height: 1.4;
                             font-weight: 700;
                             text-transform: uppercase;
@@ -524,6 +526,7 @@
                       {% endif %}
                     </td>
                   </tr>
+                  <!-- Footer -->
                   <tr
                     style="
                       -ms-text-size-adjust: 100%;
@@ -536,7 +539,7 @@
                         text-align: center;
                         -ms-text-size-adjust: 100%;
                         -webkit-text-size-adjust: 100%;
-                        background: rgb(2, 136, 209);
+                        background: rgb(52, 58, 64);
                         padding: 2.5em;
                         mso-table-lspace: 0pt !important;
                         mso-table-rspace: 0pt !important;
@@ -546,53 +549,16 @@
                         <tbody>
                           <tr>
                             <td style="padding: 1em; color: rgb(255, 255, 255)">
-                              <a
+                              <!-- <a
                                 href="{{webdomain}}"
                                 target="_blank"
                                 style="
                                   text-decoration: none;
                                   color: rgb(255, 255, 255);
                                 "
-                              >
-                                {{ instance_name }}
-                              </a>
-                            </td>
-                            <!-- NOTE:: Removed for now -->
-                            <!-- <td style="padding: 1em; color: rgb(255, 255, 255)">
-                              <a
-                                href="{{webdomain}}/data"
-                                target="_blank"
-                                style="
-                                  text-decoration: none;
-                                  color: rgb(255, 255, 255);
-                                "
-                              >
-                                About the Data
-                              </a>
-                            </td>
-                            <td style="padding: 1em; color: rgb(255, 255, 255)">
-                              <a
-                                href="{{webdomain}}/terms-of-services"
-                                target="_blank"
-                                style="
-                                  text-decoration: none;
-                                  color: rgb(255, 255, 255);
-                                "
-                              >
-                                Terms of Services
-                              </a>
-                            </td>
-                            <td style="padding: 1em; color: rgb(255, 255, 255)">
-                              <a
-                                href="{{webdomain}}/privacy-policies"
-                                target="_blank"
-                                style="
-                                  text-decoration: none;
-                                  color: rgb(255, 255, 255);
-                                "
-                              >
-                                Privacy Policies
-                              </a> -->
+                              > -->
+                              SI-WINS
+                              <!-- </a> -->
                             </td>
                           </tr>
                         </tbody>
