--- a/frontend/src/components/maps/style.scss
+++ b/frontend/src/components/maps/style.scss
@@ -223,7 +223,7 @@
   }
   .ant-tabs-tabpane {
     overflow-y: auto !important;
-    height: calc(100vh - 500px);
+    // height: calc(100vh - 500px);
     padding: 10px 20px;
   }
   .school-description {
