[#176] Add white space break on indicator dropdown style

--- a/frontend/src/components/maps/style.scss
+++ b/frontend/src/components/maps/style.scss
@@ -43,6 +43,11 @@
                 padding-right: 0;
                 color: #fff;
               }
+              &.indicator-dropdown-button {
+                div {
+                  white-space: break-spaces;
+                }
+              }
               &.selected {
                 span {
                   color: #fff;
